--- a/civrip.ui
+++ b/civrip.ui
@@ -38,7 +38,7 @@
       <x>10</x>
       <y>120</y>
       <width>411</width>
-      <height>211</height>
+      <height>241</height>
      </rect>
     </property>
     <property name="title">
@@ -222,6 +222,58 @@
       <bool>true</bool>
      </property>
     </widget>
+    <widget class="QLineEdit" name="key_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>210</y>
+       <width>171</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>210</y>
+       <width>91</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Game IP:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="inject">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>206</y>
+       <width>51</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Inject</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_7">
+     <property name="geometry">
+      <rect>
+       <x>290</x>
+       <y>206</y>
+       <width>51</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Ping</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
@@ -384,9 +436,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>370</y>
       <width>411</width>
-      <height>141</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -432,7 +484,7 @@
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
    </widget>
   </widget>
